Refactorisation de Axénisation, JSON dédié aux bactéries axniques au lieu de JSON pour axénisation. Axénisation n'a plus de JSON.