@@ -3,10 +3,12 @@ package net.john.bioreactor.content.kinetics.axenisation;
 import com.simibubi.create.AllBlocks;
 import com.simibubi.create.content.kinetics.mixer.MechanicalMixerBlockEntity;
 import com.simibubi.create.content.processing.basin.BasinBlockEntity;
+import net.john.bioreactor.content.bacteria.BacteriaData;
+import net.john.bioreactor.content.bacteria.BacteriaDataManager;
+import net.john.bioreactor.content.bacteria.ConditionState;
 import net.john.bioreactor.content.item.BioreactorItems;
 import net.john.bioreactor.content.kinetics.Anaerobic_Chamber.AnaerobicChamberBlockEntity;
 import net.john.bioreactor.content.kinetics.BioreactorRecipes;
-import net.john.bioreactor.content.metabolism.BioreactorMetabolisms;
 import net.john.bioreactor.content.metabolism.Metabolism;
 import net.john.bioreactor.content.metabolism.MetabolismLoader;
 import net.minecraft.core.BlockPos;
@@ -20,265 +22,172 @@ import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
 import net.minecraftforge.fluids.FluidStack;
-import net.minecraftforge.items.IItemHandler;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
+/**
+ * Recette *unique* : toute l’axénisation passe par ce fichier.
+ * La liste des bactéries est lue à la volée via BacteriaDataManager
+ * en fonction du tag NBT de l’inoculum.
+ */
 public class AxenisationRecipe implements Recipe<AnaerobicChamberBlockEntity> {
+
     private static final Logger LOGGER = LogManager.getLogger();
 
-
+    /** Items acceptés comme source de bactéries */
     private static final Set<Item> INOCULUM_ITEMS = Set.of(
             BioreactorItems.SAMPLE_SOIL.get(),
             BioreactorItems.ENRICHED_BACTERIA_MULTIPLE.get()
     );
 
+    /* ---------- Singleton ---------- */
+    public static final AxenisationRecipe INSTANCE =
+            new AxenisationRecipe(new ResourceLocation("bioreactor", "axenisation"));
+
     private final ResourceLocation id;
-    private final List<ItemStack> inputItems;
-    private final List<BacteriaData> targetBacteria;
-    private final Map<String, AxenisationMetabolism> metabolisms;
 
+    private AxenisationRecipe(ResourceLocation id) { this.id = id; }
 
-    public AxenisationRecipe(ResourceLocation id, List<ItemStack> inputItems, List<BacteriaData> targetBacteria) {
-        this.id = id;
-        this.inputItems = inputItems;
-        this.targetBacteria = targetBacteria;
+    /* ---------- Chargement / cache des métabolismes ---------- */
 
-        // Ne charge plus les métabolismes ici (ils seront chargés lors de la première utilisation)
-        this.metabolisms = new HashMap<>();
+    /** Map <ID JSON → wrapper AxenisationMetabolism> */
+    private volatile Map<String, AxenisationMetabolism> metabolismsCache;
 
+    private Map<String, AxenisationMetabolism> metabolisms() {
+        if (metabolismsCache == null) {
+            Map<String, Metabolism> raw = MetabolismLoader.getMetabolisms();
+            Map<String, AxenisationMetabolism> tmp = new HashMap<>();
+            raw.forEach((id, meta) -> tmp.put(id, new AxenisationMetabolism(meta)));
+            metabolismsCache = Map.copyOf(tmp);
+            LOGGER.debug("Loaded {} metabolisms from JSON", metabolismsCache.size());
+        }
+        return metabolismsCache;
     }
+
+    public Map<String, AxenisationMetabolism> getMetabolisms() { return metabolisms(); }
+
+    /**
+     * Sélectionne le premier métabolisme valide, en respectant la hiérarchie
+     * GREEN > YELLOW > (aucun).
+     */
+    String determineMetabolism(AnaerobicChamberBlockEntity chamber) {
+
+        /* 1) collecter les métabolismes valides pour cette chambre */
+        List<String> applicable = new ArrayList<>();
+        for (Map.Entry<String, AxenisationMetabolism> e : metabolisms().entrySet()) {
+            if (e.getValue().matches(chamber))
+                applicable.add(e.getKey());
+        }
+        if (applicable.isEmpty())
+            return null;
+
+        /* 2) appliquer la hiérarchie officielle */
+        for (String preferred : MetabolismLoader.METABOLISM_HIERARCHY) {
+            if (applicable.contains(preferred)) {
+                if (applicable.size() > 1)
+                    LOGGER.info("[AXE] Metabolism conflict {} → selected {}",applicable, preferred);
+                return preferred;
+            }
+        }
+
+        /* 3) aucun des métabolismes « officiels » - on prend le premier trouvé */
+        if (applicable.size() > 1)
+            LOGGER.info("[AXE] Metabolism conflict (no hierarchy) {} → selected {}",applicable, applicable.get(0));
+
+        return applicable.get(0);
+    }
+
+    /* ---------- PARTIE CRAFTING API ---------- */
 
     @Override
     public boolean matches(AnaerobicChamberBlockEntity chamber, Level level) {
-        BlockPos chamberPos = chamber.getBlockPos();
-        BlockPos basinPos = chamberPos.below();
-        BlockEntity basinEntity = level.getBlockEntity(basinPos);
-        if (!(basinEntity instanceof BasinBlockEntity)) {
-            LOGGER.debug("No Basin found below Anaerobic Chamber at " + chamberPos);
-            return false;
-        }
-        BasinBlockEntity basin = (BasinBlockEntity) basinEntity;
-        FluidStack basinWater = basin.getTanks().getFirst().getPrimaryHandler().getFluidInTank(0);
-        if (basinWater.isEmpty() || !basinWater.getFluid().equals(net.minecraft.world.level.material.Fluids.WATER) || basinWater.getAmount() < 1000) {
-            LOGGER.debug("Invalid water conditions in Basin at " + basinPos + ": amount=" + basinWater.getAmount());
-            return false;
-        }
-        IItemHandler itemHandler = basin.getCapability(ForgeCapabilities.ITEM_HANDLER).orElse(null);
-        if (itemHandler == null) {
-            LOGGER.debug("No item handler found for Basin at " + basinPos);
-            return false;
-        }
-        boolean validInput = false;
-        for (int slot = 0; slot < itemHandler.getSlots(); slot++) {
-            ItemStack basinItem = itemHandler.getStackInSlot(slot);
-            if (!basinItem.isEmpty()) {
-                for (ItemStack expected : inputItems) {
-                    if (INOCULUM_ITEMS.contains(expected.getItem())) {
-                        // Pour enriched_bacteria_multiple, comparer uniquement l'item (ignore les tags)
-                        if (expected.getItem() == BioreactorItems.ENRICHED_BACTERIA_MULTIPLE.get()) {
-                            if (ItemStack.isSameItem(basinItem, expected)) {
-                                validInput = true;
-                                LOGGER.debug("Valid enriched inoculum input found: " + basinItem.getItem().getDescriptionId());
-                                break;
-                            }
-                        } else { // Pour les autres inoculum, utiliser la comparaison stricte
-                            if (ItemStack.isSameItemSameTags(basinItem, expected)) {
-                                validInput = true;
-                                LOGGER.debug("Valid inoculum input found: " + basinItem.getItem().getDescriptionId() + " with NBT: " + basinItem.getTag());
-                                break;
-                            }
-                        }
-                    } else {
-                        if (ItemStack.isSameItem(basinItem, expected)) {
-                            validInput = true;
-                            LOGGER.debug("Valid metabolic input found: " + basinItem.getItem().getDescriptionId());
-                            break;
-                        }
-                    }
-                }
-                if (validInput) break;
-            }
-        }
-        if (!validInput) {
-            LOGGER.debug("No valid input items found in Basin at " + basinPos);
-            return false;
-        }
-        // Vérifier les blocs (Blaze Burner, Mechanical Mixer) – inchangé
-        BlockPos blazeBurnerPos = chamberPos.below(2);
-        if (!level.getBlockState(blazeBurnerPos).is(AllBlocks.BLAZE_BURNER.get())) {
-            LOGGER.debug("No Blaze Burner found at " + blazeBurnerPos + " below Basin");
-            return false;
-        }
-        BlockEntity mixerEntity = level.getBlockEntity(chamberPos.above());
-        if (!(mixerEntity instanceof MechanicalMixerBlockEntity)) {
-            LOGGER.debug("No Mechanical Mixer found above Anaerobic Chamber at " + chamberPos.above());
-            return false;
-        }
-        LOGGER.debug("All required blocks found in correct positions at " + chamberPos);
-        return true;
+        /* Vérifie seulement la structure (Basin + Blaze Burner + Mixer). */
+        BlockPos pos = chamber.getBlockPos();
+        BlockEntity below = level.getBlockEntity(pos.below());
+        BlockEntity above = level.getBlockEntity(pos.above());
+
+        return below instanceof BasinBlockEntity
+            && level.getBlockState(pos.below(2)).is(AllBlocks.BLAZE_BURNER.get())
+            && above instanceof MechanicalMixerBlockEntity;
     }
 
-    public ItemStack evaluate(AnaerobicChamberBlockEntity chamber, ItemStack inoculum, String metabolismId) {
-        RecipeProcessor processor = chamber.getRecipeProcessor();
-        BasinBlockEntity basin = processor.getBasin();
-        FluidStack water = basin.getTanks().getFirst().getPrimaryHandler().getFluidInTank(0);
+    @Override public ItemStack assemble(AnaerobicChamberBlockEntity chamber, RegistryAccess reg) { return evaluate(chamber); }
+    @Override public boolean canCraftInDimensions(int w, int h) { return true; }
+    @Override public ItemStack getResultItem(RegistryAccess reg) { return ItemStack.EMPTY; }
+    @Override public ResourceLocation getId()  { return id; }
+    @Override public RecipeSerializer<?> getSerializer() { return BioreactorRecipes.AXENISATION_SERIALIZER.get(); }
+    @Override public RecipeType<?> getType()   { return BioreactorRecipes.AXENISATION_TYPE; }
 
-        /** Récupérer les différents état
-         */
-        // La salinité
-        int salinity = water.getOrCreateTag().getInt("salinity");
+    /* ---------- Évaluation ---------- */
 
-        // Le pH
-        int pH = water.getOrCreateTag().getInt("pH");
+    public ItemStack evaluate(AnaerobicChamberBlockEntity chamber) {
+        return evaluate(
+                chamber,
+                chamber.getRecipeProcessor().getSelectedInoculum(),
+                chamber.getRecipeProcessor().getCurrentMetabolism()
+        );
+    }
 
-        // La température du blaze burner
-        String temperature = processor.getCurrentHeatLevel().name().toLowerCase();
+    public ItemStack evaluate(AnaerobicChamberBlockEntity chamber,
+                              ItemStack inoculum,
+                              String metabolismId) {
 
-        // La présence d'oxygène dans l'anaerobic chamber ET dans l'échantillon
-        String chamberOxygen = chamber.getChamberOxygenState();
-        String sampleOxygen = inoculum.getOrCreateTag().contains("oxic") ? "oxic" : "anoxic";
+        /* ----- Contexte ----- */
+        BasinBlockEntity basin = chamber.getRecipeProcessor().getBasin();
+        FluidStack water       = basin.getTanks().getFirst().getPrimaryHandler().getFluidInTank(0);
 
+        int salinity  = water.getOrCreateTag().getInt("salinity");
+        int pH        = water.getOrCreateTag().getInt("pH");
+        String temp   = chamber.getRecipeProcessor().getCurrentHeatLevel().name().toLowerCase(Locale.ROOT);
 
-        LOGGER.debug("Evaluating conditions at " + chamber.getBlockPos() +
-                ": pH=" + pH + ", salinity=" + salinity +
-                ", temperature=" + temperature +
-                ", chamberOxygen=" + chamberOxygen +
-                ", sampleOxygen=" + sampleOxygen +
-                ", metabolism=" + (metabolismId != null ? metabolismId : "none"));
+        /* ----- O₂ : utilisation de l’API chamber.getChamberOxygenState() ----- */
+        String chamberO2State = chamber.getChamberOxygenState();          // « oxic » / « anoxic »
+        boolean chamberHasAir = !"anoxic".equals(chamberO2State);
 
+        boolean sampleWasOxic = inoculum.getOrCreateTag().getBoolean("oxic");
 
-        //------
-        List<BacteriaData> bacteriaList = getRemainingBacteria(inoculum);
-        Map<BacteriaData, ConditionState> outcomes = bacteriaList.stream()
+        /* ----- Bactéries concernées ----- */
+        List<BacteriaData> bacteria = getRemainingBacteria(inoculum);
+
+        LOGGER.info("[AXE] Temp={}, pH={}, salinity={}, O2={}, metabolism={}, bacteria={}",
+                temp, pH, salinity, chamberO2State, metabolismId,
+                bacteria.stream().map(BacteriaData::getBacteriaId).collect(Collectors.joining(",")));
+
+        Map<BacteriaData, ConditionState> evaluation = bacteria.stream()
                 .collect(Collectors.toMap(
-                        bacteria -> bacteria,
-                        bacteria -> bacteria.evaluateConditions(
-                                salinity,
-                                pH,
-                                temperature,
-                                chamberOxygen,
-                                sampleOxygen,
+                        b -> b,
+                        b -> b.evaluateConditions(
+                                salinity, pH, temp,
+                                chamberHasAir, sampleWasOxic,
                                 metabolismId)
                 ));
-        RecipeResult resultProcessor = new RecipeResult(outcomes);
-        ItemStack result = resultProcessor.processOutcomes(bacteriaList);
-        LOGGER.debug("Evaluation result: " + result.getItem().getDescriptionId());
+
+        ItemStack result = new RecipeResult(evaluation).processOutcomes(bacteria);
+
+        LOGGER.info("[AXE] Outcome → {}", result.getItem().getDescriptionId());
+
         return result;
     }
 
-    public ItemStack evaluate(AnaerobicChamberBlockEntity chamber) {
-        return evaluate(chamber, chamber
-                .getRecipeProcessor()
-                .getSelectedInoculum(),
-                determineMetabolism(chamber));
-    }
-
-    public String determineMetabolism(AnaerobicChamberBlockEntity chamber) {
-
-        // -------- Assurer que les métabolismes sont chargés dans la recette --------
-        if (metabolisms.isEmpty()) {
-            // Récupérer la map globale des métabolismes (chargée par MetabolismLoader)
-            for (Map.Entry<String, Metabolism> entry : BioreactorMetabolisms.getMetabolisms().entrySet()) {
-                metabolisms.put(entry.getKey(), new AxenisationMetabolism(entry.getValue()));
-            }
-            LOGGER.debug("Metabolisms loaded into recipe " + this.id + ": " + metabolisms.keySet());
-        }
-        // Ensuite, on peut chercher le(s) métabolisme(s) correspondant(s)
-        List<String> matchingMetabolisms = new ArrayList<>();
-        for (Map.Entry<String, AxenisationMetabolism> entry : metabolisms.entrySet()) {
-            if (entry.getValue().matches(chamber)) {
-                matchingMetabolisms.add(entry.getKey());
-            }
-        }
-        if (matchingMetabolisms.isEmpty()) {
-            LOGGER.debug("No matching metabolism found among: " + metabolisms.keySet());
-            return null;
-        }
-
-        // -------- Récupérer les informations --------
-        BasinBlockEntity basin = chamber.getRecipeProcessor().getBasin();
-        FluidStack water = basin.getTanks().getFirst().getPrimaryHandler().getFluidInTank(0);
-        int salinity = water.getOrCreateTag().getInt("salinity");
-        int pH = water.getOrCreateTag().getInt("pH");
-        String temperature = chamber.getRecipeProcessor().getCurrentHeatLevel().name().toLowerCase();
-        String chamberOxygen = chamber.getChamberOxygenState();
-        ItemStack inoculum = chamber.getRecipeProcessor().getSelectedInoculum();
-        String sampleOxygen = inoculum.getOrCreateTag().contains("oxic") ? "oxic" : "anoxic";
-
-
-        List<String> greenMetabolisms = new ArrayList<>();
-
-        for (String metabolism : matchingMetabolisms) {
-
-            for (BacteriaData bacteria : targetBacteria) {
-                ConditionState state = bacteria.evaluateConditions(
-                        salinity,
-                        pH,
-                        temperature,
-                        chamberOxygen,
-                        sampleOxygen,
-                        metabolism);
-
-                if (state == ConditionState.GREEN) {
-                    greenMetabolisms.add(metabolism);
-                    break;
-                }
-            }
-        }
-        if (!greenMetabolisms.isEmpty()) {
-            String selected = greenMetabolisms.stream()
-                    .min(Comparator.comparingInt(MetabolismLoader.METABOLISM_HIERARCHY::indexOf))
-                    .orElse(greenMetabolisms.get(0));
-            LOGGER.debug("Selected GREEN metabolism: " + selected + " from conflicts: " + matchingMetabolisms);
-            return selected;
-        }
-        String selected = matchingMetabolisms.stream()
-                .min(Comparator.comparingInt(MetabolismLoader.METABOLISM_HIERARCHY::indexOf))
-                .orElse(matchingMetabolisms.get(0));
-        LOGGER.debug("Selected metabolism by hierarchy: " + selected + " from conflicts: " + matchingMetabolisms);
-        return selected;
-    }
-
+    /* ---------- Outil interne ---------- */
     private List<BacteriaData> getRemainingBacteria(ItemStack input) {
-        if (input.isEmpty()) {
-            LOGGER.debug("Input is empty, defaulting to all target bacteria: " +
-                    targetBacteria.stream().map(BacteriaData::getBacteriaId).collect(Collectors.toList()));
-            return targetBacteria;
+        if (input.isEmpty()) return List.copyOf(BacteriaDataManager.all());
+
+        CompoundTag tag = input.getTag();
+        if (tag != null && tag.contains("remaining_bacteria")) {
+            return Arrays.stream(tag.getString("remaining_bacteria").split(","))
+                    .map(BacteriaDataManager::get)
+                    .filter(Objects::nonNull)
+                    .toList();
         }
-        if (input.getItem() == BioreactorItems.ENRICHED_BACTERIA_MULTIPLE.get() || input.getItem() == BioreactorItems.SAMPLE_SOIL.get()) {
-            // Pour enriched_bacteria_multiple, si le tag "remaining_bacteria" est présent, l'utiliser ; sinon, utiliser tous les target bacteria.
-            CompoundTag tag = input.getTag();
-            if (tag != null && tag.contains("remaining_bacteria")) {
-                String bacteriaIds = tag.getString("remaining_bacteria");
-                List<String> idList = Arrays.asList(bacteriaIds.split(","));
-                LOGGER.debug("Input " + input.getItem().getDescriptionId() + " contains bacteria: " + idList);
-                return targetBacteria.stream()
-                        .filter(bacteria -> idList.contains(bacteria.getBacteriaId()))
-                        .collect(Collectors.toList());
-            }
-            LOGGER.debug("No bacteria tag found in " + input.getItem().getDescriptionId() + ", using all target bacteria");
-            return targetBacteria;
-        }
-        LOGGER.debug("Input item is not a bacteria source: " + input.getItem().getDescriptionId() + ", using all target bacteria");
-        return targetBacteria;
+        return List.copyOf(BacteriaDataManager.all());
     }
 
-
-    @Override public ResourceLocation getId() { return id; }
-    @Override public RecipeSerializer<?> getSerializer() { return BioreactorRecipes.AXENISATION_SERIALIZER.get(); }
-    @Override public RecipeType<?> getType() { return BioreactorRecipes.AXENISATION_TYPE; }
-    @Override public ItemStack getResultItem(RegistryAccess registryAccess) { return ItemStack.EMPTY; }
-    @Override public boolean canCraftInDimensions(int width, int height) { return true; }
-    @Override public ItemStack assemble(AnaerobicChamberBlockEntity chamber, RegistryAccess registryAccess) { return evaluate(chamber); }
-
-    public List<ItemStack> getInputItems() { return inputItems; }
-    public Map<String, AxenisationMetabolism> getMetabolisms() { return metabolisms; }
-    public List<BacteriaData> getTargetBacteria() { return targetBacteria; }
-    public static Set<Item> getInoculumItems() { return INOCULUM_ITEMS; }
+    /* ---------- Helpers publics ---------- */
+    public static boolean isInoculum(ItemStack stack)          { return INOCULUM_ITEMS.contains(stack.getItem()); }
+    public static Set<Item> getInoculumItems()                 { return INOCULUM_ITEMS; }
 }
